[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "machinelearningsandbox"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.4"
pandas = "^1.0"
sklearn = "^0.0.0"
[tool.poetry.dev-dependencies]
